# arduino_adc_streamer

./: .gitignore  BUFFER_OPTIMIZATION.md  GUIDE_MODULAR.md  GUI_README.md  HEATMAP_IMPLEMENTATION.md  HEATMAP_README.md  IADC_UPDATE_CHANGES.md  PHASE4_COMPLETION.md  README.md  REFACTORING_COMPLETE.md  adc_devices.json  adc_gui.py  adc_gui_old.py  adc_gui_refactored_demo.py  buffer_utils.py  config_constants.py  plus_heatmap_config.json  pyproject.toml  requirements.txt  sensor_config.py  sensor_configurations.json  signal_integrator.py  test_buffer_optimization.py  test_heatmap_thresholds.py  test_shear_cop_processor.py
Arduino_Sketches/: README.md
Legacy/: README.md  config_constants.py
Specs/: FORCE_CALIBRATION_TAB_SPEC.md  HEATMAP_TAB_SPEC.md  MAIN_APP_SPEC.md  PRESSURE_MAP_TAB_SPEC.md  README.md  ROSETTE_TAB_SPEC.md  SENSOR_TAB_SPEC.md  SPECTRUM_TAB_SPEC.md  TIME_SERIES_TAB_SPEC.md  plan-pressureMap-adjacentPackageInterpolation.md
config/: README.md  __init__.py  adc_config_state.py  adc_configuration_runner.py  adc_configuration_service.py  buffer_utils.py  channel_utils.py  config_handlers.py  config_snapshot.py  config_view_state.py  mcu_detector.py  mcu_profile.py  mcu_state.py  mcu_view_state.py  sensor_config.py
constants/: README.md  __init__.py  capture_archive.py  defaults_555.py  filtering_defaults.py  force.py  heatmap.py  plotting.py  pressure_map.py  runtime.py  sensor_config.py  serial.py  shear.py  signal_integration.py  touch_id.py  ui.py
data_processing/: README.md  __init__.py  adc_filter_engine.py  adc_filter_worker.py  adc_mux_timing.py  (+30 more)
(+190 files in other folders)
