[project]
name = "arduino-adc-streamer"
version = "0.1.0"
description = "ADC Streamer GUI for Arduino/Teensy acquisition, plotting, force sensing, and heatmap visualization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyQt6>=6.4.0",
  "pyserial>=3.5",
  "pyqtgraph>=0.13.0",
  "numpy>=1.21.0",
  "scipy>=1.9.0",
]

[project.scripts]
adc-streamer = "adc_gui:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
